# gTed

./: .CMakeLists.txt.~undo-tree~  CMakeLists.txt  CMakeLists.txt~
include/: .Input.h.~undo-tree~  .NativeOutput.h.~undo-tree~  .NativeTerminal.h.~undo-tree~  .Structs.h.~undo-tree~  .definitions.h.~undo-tree~  Definitions.h  Definitions.h~  Input.h  NativeTerminal.h  NativeTerminal.h~  Structs.h  Structs.h~
src/: .Input.c.~undo-tree~  .LineBuffers.c.~undo-tree~  .NativeOutput.c.~undo-tree~  .NativeTerminal.c.~undo-tree~  .Output.c.~undo-tree~  .main.c.~undo-tree~  Input.c  Input.c~  LineBuffers.c  LineBuffers.c~  NativeTerminal.c  NativeTerminal.c~  Output.c~  main.c  main.c~
